--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,20 +15,16 @@ jobs:
         shell: bash
 
       - uses: actions/checkout@v2
-
       - name: Install zip tool
         uses: montudor/action-zip@v1
-
       - name: Create Zip file for Lambda function
         run: zip -r code.zip .
-
       - name: AWS CLI v2
         uses: imehedi/actions-awscli-v2@latest
         with:
-          args: |
-            lambda update-function-code \
-              --function-name arn:aws:lambda:ca-central-1:654654208693:function:testfunction \
-              --zip-file fileb://code.zip
+          args: "lambda update-function-code \
+            --function-name arn:aws:lambda:ca-central-1:654654208693:function:testfunction \
+            --zip-file fileb://code.zip"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
