--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,9 @@ jobs:
       - name: Send build duration to Dynatrace
         run: |
           curl -X POST '${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
-            -H "Content-Type: text/plain; charset=utf-8" \
+            -H "Content-Type: text/plain" \
             -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
-            --data "build.duration,build_name=deploy_lambda_function $BUILD_DURATION"
+            -d "build.duration,build_name=deploy_lambda_function $BUILD_DURATION"
         env:
           DYNATRACE_URL: ${{ secrets.DYNATRACE_URL }}
           DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
