--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           BUILD_END_TIME=$(date +%s)
           BUILD_START_TIME=${{ steps.start_timer.outputs.start_time }}
           BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
-          echo "Build duration: $BUILD_DURATION seconds"
+          echo "Build duration: $BUILD_DURATION"
           echo "build_duration=$BUILD_DURATION" >> $GITHUB_OUTPUT
         shell: bash
 
