--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,13 @@ jobs:
           BUILD_END_TIME=$(date +%s)
           BUILD_START_TIME=${{ steps.start_timer.outputs.start_time }}
           BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
-          echo "Build duration: $BUILD_DURATION"
+          echo "Build duration: $BUILD_DURATION seconds"
           echo "build_duration=$BUILD_DURATION" >> $GITHUB_OUTPUT
         shell: bash
 
       - name: Send build duration to Dynatrace
         run: |
-          curl -X POST '${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
+          curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
             -H "Content-Type: text/plain" \
             -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
             -d "build.duration,build_name=deploy_lambda_function $BUILD_DURATION"
