--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: Deploy Lambda Function
 
+env:
+  datatype: "text/plain"
+
 on:
   push:
     branches: [ main ]
@@ -43,9 +46,9 @@ jobs:
       - name: Send build duration to Dynatrace
         run: |
           curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
-            -H "Content-Type: text/plain" \
+            -H "Content-Type: ${{env.datatype}}" \
             -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
-            -d "build.duration,build_name=deploy_lambda_function $BUILD_DURATION"
+            --data-raw "github.build.duration,build_time=seconds ${{BUILD_DURATION}}"
         env:
           DYNATRACE_URL: ${{ secrets.DYNATRACE_URL }}
           DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
