--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ name: Deploy Lambda Function
 
 env:
   datatype: "text/plain"
+  DYNATRACE_URL: "https://xfp73156.live.dynatrace.com"
+  DYNATRACE_API_TOKEN: "dt0c01.ZKNK5F2CV5FVYDU64SW4MMEO.QIAD2QYOVK2BEUT2IXOYH4X5Z7A2S6JUOU5UGKB3RY3QUJVPDA7XCS52EP3E7XGT"
+
 
 on:
   push:
@@ -49,6 +52,3 @@ jobs:
             -H "Content-Type: ${{env.datatype}}" \
             -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
             --data-raw "github.build.duration,duration=seconds $build_duration"
-        env:
-          DYNATRACE_URL: ${{ secrets.DYNATRACE_URL }}
-          DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_API_TOKEN }}
