--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,12 @@ jobs:
           echo "build_duration=$BUILD_DURATION" >> $GITHUB_OUTPUT
         shell: bash
 
+        env:
+          DATA: "github.build.metric,duration=seconds 12"
+
       - name: Send build duration to Dynatrace
         run: |
           curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
             -H "Content-Type: ${{env.datatype}}" \
             -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
-            --data-raw "github.build.metric,duration=seconds 42"
+            --data-raw "${{env.DATA}}"
