--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,12 +45,12 @@ jobs:
           echo "Build duration: $BUILD_DURATION seconds"
           echo "build_duration=$BUILD_DURATION" >> $GITHUB_OUTPUT
         shell: bash
-        env:
-          DATA: "github.build.metric,duration=seconds 12"
+
 
       - name: Send build duration to Dynatrace
         run: |
-          curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
-            -H "Content-Type: ${{env.datatype}}" \
-            -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
-            --data-raw "${{ env.DATA }}"
+          # curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
+          #   -H "Content-Type: ${{env.datatype}}" \
+          #   -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
+          #   --data-raw "github.build.metric,duration=seconds 12"
+          echo $BUILD_DURATION
