--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,15 @@ jobs:
         run: |
           BUILD_END_TIME=$(date +%s)
           BUILD_START_TIME=${{ steps.start_timer.outputs.start_time }}
-          BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
-          echo "Build duration: $BUILD_DURATION seconds"
-          echo "build_duration=$BUILD_DURATION" >> $GITHUB_OUTPUT
-          curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
-            -H "Content-Type: ${{env.datatype}}" \
-            -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
-            --data-raw "github.build.metric,duration=seconds $BUILD_DURATION"
+          echo "BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))" >> $GITHUB_ENV
+          echo "Build duration: ${{ vars.BUILD_DURATION}} seconds"
         shell: bash
 
 
+      - name: Send build duration to Dynatrace
+        run: |
+          curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
+            -H "Content-Type: ${{env.datatype}}" \
+            -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
+            --data-raw "github.build.metric,duration=seconds ${{ vars.BUILD_DURATION}}"
+        shell: bash
