--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,9 +41,10 @@ jobs:
         run: |
           BUILD_END_TIME=$(date +%s)
           BUILD_START_TIME=${{ steps.start_timer.outputs.start_time }}
-          BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
-          echo "BUILD_DURATION=$BUILD_DURATION" >> $GITHUB_ENV
+          BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))\
           echo "Build duration: $BUILD_DURATION seconds"
+        env:
+         BUILD_DURATION: $BUILD_DURATION
         shell: bash
 
 
@@ -52,5 +53,5 @@ jobs:
           curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
             -H "Content-Type: ${{env.datatype}}" \
             -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
-            --data-raw "github.build.metric,duration=seconds ${{ vars.BUILD_DURATION }}"
+            --data-raw "github.build.metric,duration=seconds ${{ env.BUILD_DURATION }}"
         shell: bash
