--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: Deploy Lambda Function
 env:
   datatype: "text/plain"
   DYNATRACE_URL: "https://xfp73156.live.dynatrace.com"
-  DYNATRACE_API_TOKEN: "dt0c01.ZKNK5F2CV5FVYDU64SW4MMEO.QIAD2QYOVK2BEUT2IXOYH4X5Z7A2S6JUOU5UGKB3RY3QUJVPDA7XCS52EP3E7XGT"
-
 
 on:
   push:
@@ -44,16 +42,13 @@ jobs:
           BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
           echo "BUILD_DURATION=$BUILD_DURATION" >> $GITHUB_ENV
           echo "Build duration: $BUILD_DURATION seconds"
-        # sleep 10
-        # env:
-        #  BUILD_DURATION: $BUILD_DURATION
+        # sleep 10 (optional to test and induce lag in build duration)
         shell: bash
-
 
       - name: Send build duration to Dynatrace
         run: |
           curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
             -H "Content-Type: ${{env.datatype}}" \
-            -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
+            -H "Authorization: Api-Token ${{ secrets.DYNATRACE_API_TOKEN }}" \
             --data-raw "github.build.metric,duration=seconds $BUILD_DURATION"
         shell: bash
