--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy Lambda Function
 
 env:
   datatype: "text/plain"
-  
+
 on:
   push:
     branches: [ main ]
@@ -48,7 +48,7 @@ jobs:
 
       - name: Send build duration to Dynatrace
         run: |
-          curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
+          curl -X POST "${{ vars.DYNATRACE_URL }}/api/v2/metrics/ingest" \
             -H "Content-Type: ${{env.datatype}}" \
             -H "Authorization: Api-Token ${{ secrets.DYNATRACE_API_TOKEN }}" \   
             --data-raw "github.build.metric,duration=seconds $BUILD_DURATION"
