--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,9 @@ name: Deploy Lambda Function
 
 env:
   datatype: "text/plain"
+  DYNATRACE_URL: "https://xfp73156.live.dynatrace.com"
+  DYNATRACE_API_TOKEN: "dt0c01.5LZTAXJ4VNVIII3BEVFL7UI3.QCQZQWZYQEBCC4RG4ZQSJZQUSQRGF6CHHRUVW5G4LJDKVYNE6D657KSR26XK2RG5"
+
 
 on:
   push:
@@ -41,15 +44,14 @@ jobs:
           BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
           echo "BUILD_DURATION=$BUILD_DURATION" >> $GITHUB_ENV
           echo "Build duration: $BUILD_DURATION seconds"
-        # sleep 10 (optional to test and induce lag in build duration)
-        # DYNATRACE_API_TOKEN stored in GitHub Secrets (secrets.DYNATRACE_API_TOKEN)
-        # DYNATRACE_URL stored in GitHub Variables (vars.DYNATRACE_URL)
+        env:
+         BUILD_DURATION: $BUILD_DURATION
         shell: bash
 
       - name: Send build duration to Dynatrace
         run: |
-          curl -X POST "${{ vars.DYNATRACE_URL }}/api/v2/metrics/ingest" \
-            -H "Content-Type: ${{ env.datatype }}" \
-            -H "Authorization: Api-Token ${{ secrets.DYNATRACE_API_TOKEN }}" \   
+          curl -X POST "${{ env.DYNATRACE_URL }}/api/v2/metrics/ingest" \
+            -H "Content-Type: ${{env.datatype}}" \
+            -H "Authorization: Api-Token ${{ env.DYNATRACE_API_TOKEN }}" \
             --data-raw "github.build.metric,duration=seconds $BUILD_DURATION"
         shell: bash
