--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
           BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
           echo "BUILD_DURATION=$BUILD_DURATION" >> $GITHUB_ENV
           echo "Build duration: $BUILD_DURATION seconds"
+        # sleep 10 (optional to test and induce lag in build duration)
+        # DYNATRACE_API_TOKEN stored in GitHub Secrets (secrets.DYNATRACE_API_TOKEN)
+        # DYNATRACE_URL stored in GitHub Variables (vars.DYNATRACE_URL)
         env:
          BUILD_DURATION: $BUILD_DURATION
         shell: bash
