--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy Lambda Function
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   deploy:
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Start timer
         id: start_timer
-        run: echo "start_time=$(date +%s)" >> $GITHUB_OUTPUT
+        run: |
+          echo "start_time=$(date +%s)" >> $GITHUB_OUTPUT
         shell: bash
 
       - uses: actions/checkout@v3
@@ -27,7 +28,7 @@ jobs:
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: "ca-central-1"
+          aws_region: ca-central-1
           cli_subcommand: |
             lambda update-function-code \
               --function-name arn:aws:lambda:ca-central-1:654654208693:function:testfunction \
@@ -41,15 +42,18 @@ jobs:
           BUILD_DURATION=$((BUILD_END_TIME - BUILD_START_TIME))
           echo "BUILD_DURATION=$BUILD_DURATION" >> $GITHUB_ENV
           echo "Build duration: $BUILD_DURATION seconds"
+          # sleep 10 (optional to test and induce lag in build duration)
         shell: bash
+      # DYNATRACE_API_TOKEN stored in GitHub Secrets (secrets.DYNATRACE_API_TOKEN)
+      # DYNATRACE_URL stored in GitHub Variables (vars.DYNATRACE_URL)
 
       - name: Send build duration to Dynatrace
         run: |
           echo "Sending build duration: $BUILD_DURATION seconds"
-          curl -X POST "${{ secrets.DYNATRACE_URL }}/api/v2/metrics/ingest" \
+          curl -X POST "${{ vars.DYNATRACE_URL }}/api/v2/metrics/ingest" \
             -H "Content-Type: text/plain" \
             -H "Authorization: Api-Token ${{ secrets.DYNATRACE_API_TOKEN }}" \
-            --data-raw "github.build.duration,build_time=seconds $BUILD_DURATION"
+            --data-raw "github.build.metric,duration=seconds $BUILD_DURATION"
         shell: bash
 
       - name: Send build status to Dynatrace
@@ -61,7 +65,6 @@ jobs:
           else
             EVENT_TITLE="Build Failed"
           fi
-
           echo "Sending build status: $BUILD_STATUS"
 
           # Prepare the JSON payload
@@ -71,20 +74,6 @@ jobs:
   "source": "GitHub Actions",
   "description": "Build $BUILD_STATUS for job '${{ github.job }}' in workflow '${{ github.workflow }}'.",
   "title": "$EVENT_TITLE",
-  "attachRules": {
-    "tagRule": [
-      {
-        "meTypes": ["CUSTOM_DEVICE"],
-        "tags": [
-          {
-            "context": "CONTEXTLESS",
-            "key": "GitHubRepository",
-            "value": "${{ github.repository }}"
-          }
-        ]
-      }
-    ]
-  },
   "customProperties": {
     "workflow": "${{ github.workflow }}",
     "job": "${{ github.job }}",
