--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,24 +15,24 @@ jobs:
           echo "start_time=$(date +%s)" >> $GITHUB_OUTPUT
         shell: bash
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Install zip tool
-        run: sudo apt-get install zip -y
+        run: montudor/action-zip@v1
 
       - name: Create Zip file for Lambda function
         run: zip -r code.zip .
 
       - name: Update Lambda Function Code
-        uses: aws-actions/aws-cli@v1
+        uses: imehedi/actions-awscli-v2@latest
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ca-central-1
-          cli_subcommand: |
-            lambda update-function-code \
-              --function-name arn:aws:lambda:ca-central-1:654654208693:function:testfunction \
-              --zip-file fileb://code.zip
+          args: "lambda update-function-code \
+            --function-name arn:aws:lambda:ca-central-1:654654208693:function:testfunction \
+            --zip-file fileb://code.zip"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: "ca-central-1"
 
       - name: Stop timer and calculate duration
         id: stop_timer
