--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install zip tool
-        uses: montudor/action-zip@v1 2>&1 | tee -a build.log
+        uses: montudor/action-zip@v1 
 
       - name: Create Zip file for Lambda function
         run: zip -r code.zip . 2>&1 | tee -a build.log
