--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,13 +74,14 @@ jobs:
               "eventType": "CUSTOM_INFO",
               "source": "GitHub Actions",
               "description": "Build $BUILD_STATUS for job '${{ github.job }}' in workflow '${{ github.workflow }}'.",
-              "title": "$EVENT_TITLE",
+              "title": "GitHub_Actions",
               "properties": 
                 {
                   "workflow": "${{ github.workflow }}",
                   "actor": "${{ github.actor }}",
                   "repository": "${{ github.repository }}",
                   "commit_message": "${{ github.event.head_commit.message }}",
+                  "build_status": "$EVENT_TITLE"
                   "build_duration": "$BUILD_DURATION",
                   "job": "${{ github.job }}",
                   "run_id": "${{ github.run_id }}",
