--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,9 +72,8 @@ jobs:
           EVENT_PAYLOAD=$(cat <<EOF
             {
               "eventType": "CUSTOM_INFO",
-              "source": "GitHub Actions",
-              "description": "Build $BUILD_STATUS for job '${{ github.job }}' in workflow '${{ github.workflow }}'.",
               "title": "GitHub_Actions",
+              "description": "Build $BUILD_STATUS for job '${{ github.job }}' in workflow '${{ github.workflow }}'.",
               "properties": 
                 {
                   "workflow": "${{ github.workflow }}",
@@ -82,7 +81,7 @@ jobs:
                   "repository": "${{ github.repository }}",
                   "commit_message": "${{ github.event.head_commit.message }}",
                   "build_status": "$EVENT_TITLE",
-                  "build_duration": "$BUILD_DURATION",
+                  "build_duration_seconds": "$BUILD_DURATION",
                   "job": "${{ github.job }}",
                   "run_id": "${{ github.run_id }}",
                   "run_number": "${{ github.run_number }}",
